When using `mass_background_update`, added `ignore_locked` attribute which will prevent Kometa from resetting the image if the poster field is locked (i.e. a previous mass poster update). This can effectively act as a differential update system.
Add `date` option for schedules
Add `trakt`, `omdb_metascore`, `omdb_tomatoes` ratings sources for mass operations.
Add `trakt` ratings source for mass episode operations.
Added GitHub token validation during config validation.
add `plex` ratings source for mass operations.
Orderly error and no caching on too-large image

# Docs
Added "getting started" page
Added page to describe all the YAML files
Updated Synology page for DSM 7.2 and added a disclaimer about what it covers
Added "undoing changes" page

# Defaults
Fixed incorrect content rating mappings in various Default files
Fixes an issue where Prime Video overlays/collections would not be built when the `watch_region` is set to AU or NL
Fixes an issue where Rotten Tomatoes Verified Hot wasn't working
Updates `Alien vs Predator` and `X-Men` lists to new lists which include most recent releases
Adds `style` template variable for Streaming and Chart defaults, allowing user to choose color or white logos for collection posters
Added `Paramount+ with Showtime` to both `Paramount+` and `Showtime` for Networks and Streaming, any existing weighting is unchanged.
Added Aymara language with Bolivian flag to audio/subtitle overlay languages (credit to popeadam)

# Bug Fixes
Fixed the `cast` search option for the `imdb_search` builder
Fixes #2258 `imdb_list` sort was not being parsed correctly
Fixes `letterboxd_list` rating filter to use a 1-10 rating vs 1-100 to reflect how letterboxd ratings work on their website
Fixes #2274 Enhance handling of smart collections in deletion
Fixed the `ids_to_anidb` lookup for anime movies and shows
Fixes an issue where episode overlays sometimes wouldn't be added
Fixes an issue with IMDb Parental Labels not working