@@ -737,6 +737,34 @@ Kometa will load those environment variables when it starts up, and you don't ha
             docker run -it -v "X:\Media\Kometa\config:/config:rw" kometateam/kometa --width 150
             ```
 
+??? blank "Priority&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;`-pr`/`--priority`&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;`KOMETA_PRIORITY`<a class="headerlink" href="#priority" title="Permanent link">¶</a>"
+
+    <div id="priority" />Run the Kometa process at a lower priority.  Will default to normal priority if not specified.
+
+    <hr style="margin: 0px;">
+
+    **Shell Flags:**  `-priority` or `--priority` (ex. `--priority 75`)
+
+    **Environment Variable:** `KOMETA_NICE` (ex. `KOMETA_PRIORITY=75`)
+
+    **Options:** 
+    - `25`: Below Normal
+    - `50`: Normal (default)
+    - `75`: Above Normal
+    - `90`: High
+    - `100`: Realtime
+
+    !!! example
+        === "Local Environment"
+            ```
+            python kometa.py --priority 25
+            ```
+        === "Docker Environment"
+            ```
+            docker run -it -v "X:\Media\Kometa\config:/config:rw" kometateam/kometa --priority 25
+            ```
+
+
 ??? blank "Config Secrets&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;`--kometa-***`&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;`KOMETA_***`<a class="headerlink" href="#kometa-vars" title="Permanent link">¶</a>"
 
     <div id="kometa-vars" />All Run Commands that are in the format `--kometa-***` and Environment Variables that are in the 
